# MediFlow

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  RUNNING.md  docker-compose.prod.yml  docker-compose.yml  explanation.md  pyproject.toml
.github/workflows/: main.yml  pr.yml  release.yml
airflow/dags/: dbt_marts.py  dims_scd2.py  etl_core.py  forecasting.py
airflow/plugins/: callbacks.py
data_generation/: distributions.py  generate.py  weather.py
data_generation/synthea/: run_synthea.sh
dbt/mediflow/: .user.yml  dbt_project.yml  profiles.yml
dbt/mediflow/macros/: scd2_merge.sql
dbt/mediflow/models/: schema.yml  (+1 more)
docker/keycloak/: realm-export.json
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docker/superset/: Dockerfile
docker/vault/: config.hcl
docs/: architecture.md  security.md
etl/: db.py  dlq.py  late_data.py  load.py  transform.py
etl/gx/: great_expectations.yml
forecasting/: evaluate.py  features.py  lstm_ambulance.py  prophet_occupancy.py  runner.py  sarima_er_wait.py
mediflow.info/: PKG-INFO  SOURCES.txt  requires.txt
mediflow_intelligence.egg-info/: top_level.txt
olap/: build_duckdb.py
scripts/: backup.sh  deploy.sh  smoke_test.sh
security/: pseudonymise.py  vault_client.py
seed_output/: dispatch.csv  hospitals.csv  patients.csv  weather.csv
superset/: alerts.md  superset_config.py
superset/assets/: README.md  metadata.yaml
tests/: conftest.py
tests/integration/: test_etl_roundtrip.py
tests/unit/: test_distributions.py  test_features.py  test_pseudonymise.py
(+43 files in other folders)
