[project]
name = "mediflow"
version = "0.1.0"
description = "Healthcare resource demand forecasting and BI platform"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "faker>=25.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "duckdb>=1.0",
    "prophet>=1.1.5",
    "pmdarima>=2.0.4",
    "torch>=2.3",
    "hvac>=2.2",
    "requests>=2.32",
    "great-expectations>=0.18,<1.0",
    "holidays>=0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.4",
    "sqlfluff>=3.0",
    "detect-secrets>=1.5",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]  # assert allowed in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast, isolated, no external services",
    "integration: requires the docker compose stack",
]

[tool.setuptools.packages.find]
include = ["data_generation*", "etl*", "forecasting*", "olap*", "security*"]
